# lilv

./: AUTHORS  CMakeLists.txt
include/lilv/: lilv.h
serd/include/serd/: serd.h
sord/include/sord/: sord.h
sratom/include/sratom/: sratom.h
zix/include/zix/: attributes.h
